Menu_MiniPanels 7.x-1.x-dev, xxxx-xx-xx
---------------------------------------


Menu_MiniPanels 7.x-1.0-rc7, 2012-06-17
---------------------------------------
#1264738 by DamienMcKenna: Added a note about 404 pages and Navigation404.
#1553144 by DamienMcKenna: Removed some unnecessary code from
  menu_minipanels_prepare_links().
#1586122 by DamienMcKenna: Bug in how menus were enabled, should work now.
#1396032 by DamienMckenna: Manually re-load contextual menus on all qTip popups
  and cleans up the output code to better use the render API.
#1604638 by DamienMcKenna: Added a note to the README.txt about a compatibility
  problem with old versions of Menu_Attributes.
#1425046 by jwilson3: Hover class could still get stuck in certain scenarios.
Added a note about compatibility problems with JavaScript widgets.


Menu_MiniPanels 7.x-1.0-rc6, 2012-04-28
---------------------------------------
#1440474 by davidwhthomas, DamienMcKenna: Allow pages to be skipped by path.
#1535712 by DamienMcKenna: Quick links to toggle menus from the settings page.
#1551562 by DamienMcKenna: Don't load qTip code if no menu items configured.
#1535736 by DamienMcKenna: Documentation updates.


Menu_MiniPanels 7.x-1.0-rc5, 2012-04-08
---------------------------------------
#1505112 by DamienMcKenna: Updated drupal_add_js() calls to ensure the module's
  files load before any custom style JS files are loaded.
#1199790 by DamienMcKenna: Fixed update 7101.
#1199790 by DamienMcKenna: Slight code cleanup on the update scripts.
#1337710 by DamienMcKenna: Moved the menu path to the correct location, and
  slightly improved the settings menu item's description.
#1387914 by DamienMcKenna: Updated the README.txt file.
#1216546 by DamienMcKenna: Added support for the Hide Delay setting.
#1508774 by DamienMcKenna: Added the 'configure' directive to the info file so
  that a link to the settings page shows on the main modules page.