@@ -1,5 +1,7 @@
 Menu_MiniPanels 7.x-1.x-dev, xxxx-xx-xx
 ---------------------------------------
+#1580312 by codycraven, DamienMcKenna: Improved the custom JS to be cleaner and
+  more compatible with theming changes.
 
 
 Menu_MiniPanels 7.x-1.0-rc7, 2012-06-17
